[gd_scene load_steps=2 format=3]

[ext_resource path="res://scripts/ui/gameplay_hud.gd" type="Script" id="1_abcde"]

[node name="GameplayHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="ScoreLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Score: 0"

[node name="AccuracyLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Accuracy: 100%" 